--- a/cart.html
+++ b/cart.html
@@ -20,6 +20,7 @@
 <body>
     <div class="checkout">
       <div id="app">
+        <div>{{title}}</div>
         <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs>
             <symbol id="icon-add" viewBox="0 0 32 32">
