--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,6 @@
 <body>
     <div class="checkout">
       <div id="app">
-        <div>{{title}}</div>
         <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs>
             <symbol id="icon-add" viewBox="0 0 32 32">
@@ -64,7 +63,7 @@
                   </ul>
                 </div>
                 <ul class="cart-item-list">
-                  <li>
+                  <li v-for="(item,index) in productlist">
                     <div class="cart-tab-1">
                       <div class="cart-item-check">
                         <a href="javascript:void 0" class="item-check-btn">
@@ -72,27 +71,27 @@
                         </a>
                       </div>
                       <div class="cart-item-pic">
-                        <img src="img/goods-1.jpg" alt="烟">
+                        <img :src="item.productImage" alt="烟">
                       </div>
                       <div class="cart-item-title">
-                        <div class="item-name">黄鹤楼香烟</div>
+                        <div class="item-name">{{index}}{{item.productName}}</div>
                       </div>
                       <div class="item-include">
                         <dl>
                           <dt>赠送:</dt>
-                          <dd>打火机</dd>
+                          <dd v-for="part in item.parts" v-text=""part.partsName>打火机</ddv-for>
                         </dl>
                       </div>
                     </div>
                     <div class="cart-tab-2">
-                      <div class="item-price"></div>
+                      <div class="item-price">{{item.productPrice}}</div>
                     </div>
                     <div class="cart-tab-3">
                       <div class="item-quantity">
                         <div class="select-self select-self-open">
                           <div class="quantity">
                             <a href="javascript:void 0"></a>
-                            <input type="text" value="0" disabled>
+                            <input type="text" value="0" disabled v-model="item.productQuantity">
                             <a href="javascript:void 0"></a>
                           </div>
                         </div>
@@ -100,7 +99,7 @@
                       </div>
                     </div>
                     <div class="cart-tab-4">
-                      <div class="item-price-total">0.00</div>
+                      <div class="item-price-total">{{item.productPrice*item.productQuantity}}</div>
                     </div>
                     <div class="cart-tab-5">
                       <div class="cart-item-operation">
