--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,7 @@
               <div class="cart-foot-l">
                 <div class="item-all-check">
                   <a href="javascript:void 0">
-                    <span class="item-check-btn" :class="{'check':checkAllFlag}" @click="checkAll(true)">
+                    <span class="item-check-btn" :class="{'check':checkAllFlag}" @click="checkAll()">
                       <svg class="icon icon-ok"><use xlink:href="#icon-ok"></use></svg>
                     </span>
                     <span>全选</span>
