--- a/cart.html
+++ b/cart.html
@@ -132,7 +132,7 @@
               </div>
               <div class="cart-foot-r">
                 <div class="item-total">
-                  Item total: <span class="total-price"></span>
+                  Item total: <span class="total-price">{{totalMoney | money('元')}}</span>
                 </div>
                 <div class="next-btn-wrap">
                   <a href="javascrit:;" class="btn btn--red" style="width: 200px">结账</a>
